--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,8 @@ html, body {
 	font-family: 'Inconsolata';
 	font-size: 18px;
 	/* black scheme*/
-	background:black;
-	color:white;
+	/*background:black;*/
+	/*color:white;*/
 }
 
 body.prevent-scroll {
@@ -25,7 +25,7 @@ body.prevent-scroll {
 
 ::selection {
 	color: white;
-	background: white;
+	background: black; 
 }
 
 #sketch-holder {
@@ -40,9 +40,8 @@ body.prevent-scroll {
 }
 
 .work-section-label {
-	/*padding-top: 10px;*/
-	padding-bottom: 15px;
-	font-size: 24px;
+	margin-bottom: 22px;
+	font-size: 28px;
 }
 .project-row {
 	/*margin-top: 10px;*/
@@ -68,7 +67,7 @@ body.prevent-scroll {
 	width:100%;
 	text-align:left;
 	/*Black scheme*/
-	color: #FFC107;
+	/*color: #FFC107;*/
 }
 .project-info-desc {
 	/*height: 30px;*/
@@ -99,7 +98,7 @@ body.prevent-scroll {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	filter: grayscale(100%);
+	/* filter: grayscale(100%); */
 	transition: filter 3s;
 }
 
@@ -255,10 +254,12 @@ body.prevent-scroll {
 	text-transform: uppercase;
 	font-weight: 700;
 	letter-spacing: 6px;
+	margin-bottom: 8px;
 }
 
 #logo-heading-text {
 	margin: 0 auto;
+	color: white;
 }
 
 #logo-subheading {
