--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,8 @@ html, body {
 	font-family: 'Inconsolata';
 	font-size: 18px;
 	/* black scheme*/
-	/*background:black;*/
-	/*color:white;*/
+	background:black;
+	color:white;
 }
 
 body.prevent-scroll {
@@ -25,7 +25,7 @@ body.prevent-scroll {
 
 ::selection {
 	color: white;
-	background: black; 
+	background: white;
 }
 
 #sketch-holder {
@@ -40,8 +40,9 @@ body.prevent-scroll {
 }
 
 .work-section-label {
-	margin-bottom: 22px;
-	font-size: 28px;
+	/*padding-top: 10px;*/
+	padding-bottom: 15px;
+	font-size: 24px;
 }
 .project-row {
 	/*margin-top: 10px;*/
@@ -67,7 +68,7 @@ body.prevent-scroll {
 	width:100%;
 	text-align:left;
 	/*Black scheme*/
-	/*color: #FFC107;*/
+	color: #FFC107;
 }
 .project-info-desc {
 	/*height: 30px;*/
@@ -98,7 +99,7 @@ body.prevent-scroll {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	/* filter: grayscale(100%); */
+	filter: grayscale(100%);
 	transition: filter 3s;
 }
 
@@ -254,12 +255,10 @@ body.prevent-scroll {
 	text-transform: uppercase;
 	font-weight: 700;
 	letter-spacing: 6px;
-	margin-bottom: 8px;
 }
 
 #logo-heading-text {
 	margin: 0 auto;
-	color: white;
 }
 
 #logo-subheading {
