--- a/css/styles.css
+++ b/css/styles.css
@@ -30,8 +30,8 @@ html, body {
 	font-family: 'Inconsolata';
 	font-size: 18px;
 	/* black scheme*/
-	background:black;
-	color:white;
+	/*background:black;*/
+	/*color:white;*/
 }
 
 body.prevent-scroll {
@@ -47,7 +47,7 @@ body.prevent-scroll {
 
 ::selection {
 	color: white;
-	background: white;
+	background: black; 
 }
 
 
@@ -122,9 +122,8 @@ body.prevent-scroll {
 }
 
 .work-section-label {
-	/*padding-top: 10px;*/
-	padding-bottom: 15px;
-	font-size: 24px;
+	margin-bottom: 22px;
+	font-size: 28px;
 }
 .project-row {
 	/*margin-top: 10px;*/
@@ -170,12 +169,7 @@ body.prevent-scroll {
 	display:block;
 	width:100%;
 	text-align:left;
-<<<<<<< HEAD
 	color: black;
-=======
-	/*Black scheme*/
-	color: #FFC107;
->>>>>>> c8964594803b8f3028f516e1779e714d50b90e0a
 }
 .project-info-desc {
 	/*height: 30px;*/
@@ -367,10 +361,12 @@ body.prevent-scroll {
 	text-transform: uppercase;
 	font-weight: 700;
 	letter-spacing: 6px;
+	margin-bottom: 8px;
 }
 
 #logo-heading-text {
 	margin: 0 auto;
+	color: white;
 }
 
 #logo-subheading {
